video uploaded and aligning fixed

--- a/website/css/stylesheet.css
+++ b/website/css/stylesheet.css
@@ -1,3 +1,7 @@
+p {
+    text-align: justify;
+}
+
 #side {
 	margin-left: 2%;
 	margin-top: 2%;
@@ -109,7 +113,7 @@ table .titles{
     font-size: 15px;
 }
 
-iframe {
+#usecases {
 	border: 0px;
 	width: 100%;
 	height: 1000px;
